# Chess_Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: attacks.hpp  bitboard.cpp  bitboard.hpp  board.cpp  board.hpp  enums.hpp  evaluation.cpp  evaluation.hpp  magics.hpp  main.cpp  move.hpp  move_array.hpp  move_generator.cpp  move_generator.hpp  random.hpp  search.cpp  search.hpp  time.cpp  time.hpp  transposition_table.hpp  uci.cpp  uci.hpp  zobrist.hpp
src/nnue/: misc.h  nnue.cpp
